--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,7 +22,33 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
+  build:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 
+        - uses: pnpm/action-setup@v3
+          with:
+            version: 8
+        - name: Setup Node
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
+            cache: pnpm
+        - name: Setup Pages
+          uses: actions/configure-pages@v5
+        - name: Install dependencies
+          run: pnpm install
+        - name: Build with Rspress
+          run: |
+            pnpm run build
+        - name: Upload artifact
+          uses: actions/upload-pages-artifact@v3
+          with:
+            path: dist
+
   deploy:
     environment:
       name: github-pages
