--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,8 +1,9 @@
-name: Deploy Static
+name: Deploy Rspress Site
 
 on:
+  push:
+    branches: [main]
   workflow_dispatch:
-  repository_dispatch:
 
 permissions:
   contents: read
@@ -11,45 +12,52 @@ permissions:
 
 concurrency:
   group: pages
-  cancel-in-progress: false
+  cancel-in-progress: true  # Mejor para evitar despliegues obsoletos
 
 jobs:
-
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 8
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: pnpm
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Install dependencies
-        run: pnpm install
-      - name: Build with Rspress
-        run: |
-          pnpm run build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dist
-
-  deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
-    runs-on: ubuntu-latest
-    name: Deploy
+    
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false  # Más seguro para despliegues
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+          
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+          
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile  # Más consistente
+
+      - name: Build with Rspress
+        run: |
+          pnpm run build
+          ls -R dist  # Verificación de la estructura de archivos
+          
+      - name: Validate build output
+        run: |
+          [ -f dist/index.html ] || (echo "Error: No se encontró index.html" && exit 1)
+          [ -d dist/static/css ] || (echo "Error: No se encontró CSS" && exit 1)
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'dist'
+          retention-days: 1  # Limpieza automática
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
